Aug 30th Module

--- a/NTProj10_SpringBoot_DI_Using_Profiler/src/main/resources/application_prod.properties
+++ b/NTProj10_SpringBoot_DI_Using_Profiler/src/main/resources/application_prod.properties
@@ -1,10 +1,15 @@
-spring.application.name=OmniCoreProj02_UserProfileAndAccount_Management
+spring.application.name=NTProj10_SpringBoot_DI_Using_Profiler
 
+
+## ===============================
+## =PostgreSQL Configuration
+## ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/MyPostgreSQL
 spring.datasource.username=postgres
-spring.datasource.password=Nur@1234
+spring.datasource.password=Nur@123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Hibernate DDL auto
 spring.jpa.hibernate.ddl-auto=update
-
